--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,21 @@
 {
-    "name": "damiantw/laravel-scout-mysql-driver",
+    "name": "waavi/laravel-scout-mysql-driver",
     "description": "MySQL driver for Laravel Scout.",
     "license": "MIT",
     "authors": [
         {
             "name": "Damian Crisafulli",
             "email": "damian.crisafulli@troyweb.com"
-        }
+        },
+        {
+            "name": "WAAVI",
+            "email": "info@waavi.com"
+        },
     ],
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "~5.3",
         "laravel/scout": "^2.0"
     },
     "autoload": {
