--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": Mihail Ilinov",
+            "name": "Mihail Ilinov",
             "email": "mihail@ilinov.eu"
         }
     ],
